--- a/index.html
+++ b/index.html
@@ -701,7 +701,7 @@
       <div class="dark-box"></div>
       <div class="content">
         <h1 id='welcome'>Welcome</h1>
-<p>Thank you for visiting the TSheets API Documentation Portal!  We hope you&#39;ll easily find everything you need. If not, please let us know and we&#39;ll make it right.  Whether you&#39;re running into a problem, have feedback or a great suggestion, or would just like to talk through integration scenarios, we&#39;d <a href="mailto:help@tsheets.com?cc=SBSEGTimeTrackingSegment-Partnerships@intuit.com">love to hear from you</a>.</p>
+<p>Thank you for visiting the TSheets API Documentation Portal.  We hope you&#39;ll easily find everything you need. If not, please let us know and we&#39;ll make it right.  Whether you&#39;re running into a problem, have feedback or a great suggestion, or would just like to talk through integration scenarios, we&#39;d <a href="mailto:help@tsheets.com?cc=SBSEGTimeTrackingSegment-Partnerships@intuit.com">love to hear from you</a>.</p>
 <h2 id='introduction'>Introduction</h2>
 <p>The TSheets API provides programmatic access to the same time tracking, managing, scheduling and reporting features as our top-rated web-based and mobile apps.  With it you can quickly build integrations, for example to automatically sync employee time tracking data for payroll and invoicing. Or, create new scheduling or project management solutions.  The options are unlimited.  For inspiration, check out the amazing integrations our partners have built on our <a href="https://www.tsheets.com/app-marketplace">App Marketplace</a>.  They&#39;re solving real business needs and saving customers time and money.</p>
 
